<resources>
    <string name="app_name">Work List</string>
    <string name="floatingactionbutton">Add a Task</string>
    <string name="editTextview"><b>Title</b></string>
    <string name="EditTextview2"><b>Description</b></string>
    <string name="EditTextview3"><b>Date</b></string>
    <string name="EditTextview4"><b>Time</b></string>
    <string name="floatingactionbutton2">Save</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="Textview">Reminder</string>
    <string name="ImageButton">Star</string>
    <string name="Textview45">Are You Sure Do You Want to delete ?</string>
    <string name="textview88">To use notification allow this app to use battery in background follow this path app info/battery/unrestricted</string>
</resources>